[metadata]
name = pyxcute
version = attr: xcute.__pkginfo__.__version__
description = A small task runner inspired by npm scripts.
author = eight
author_email = eight04@gmail.com

# See https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifiers =
	Development Status :: 5 - Production/Stable
	Environment :: Console
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Natural Language :: Chinese (Traditional)
	Programming Language :: Python :: 2.7
	Programming Language :: Python :: 3.6
	Topic :: Software Development :: Libraries :: Python Modules
	Topic :: Software Development :: Build Tools
	
keywords = run, task, runner, execute, bump, bumper, build, tool, npm
license = MIT
long_description = file: README.rst
url = https://github.com/eight04/pyXcute

[options]
zip_safe = True
packages = find:

install_requires =
	semver >= 2.4.1, < 3
	ordered-set >= 2.0.1, < 3
	send2trash >= 1.3.0, < 2
	natsort >= 5.0.2, < 6
	pathlib2 >= 2.3.2, < 3; python_version < "3.5"

[options.entry_points]
console_scripts =
	x-clean = xcute.utils:clean
	x-cat = xcute.utils:concat
	x-copy = xcute.utils:copy
	x-pipe = xcute.utils:pipe
