[metadata]
name = pyxcute
version = 0.8.1
description = A small task runner inspired by npm scripts.
author = eight
author_email = eight04@gmail.com

# See https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifiers =
	Development Status :: 5 - Production/Stable
	Environment :: Console
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Natural Language :: Chinese (Traditional)
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3.10
  Programming Language :: Python :: 3.11
  Programming Language :: Python :: 3.12
	Topic :: Software Development :: Libraries :: Python Modules
	Topic :: Software Development :: Build Tools
	
keywords = run, task, runner, execute, bump, bumper, build, tool, npm
license = MIT
long_description = file: README.rst
url = https://github.com/eight04/pyXcute

[options]
zip_safe = True
packages = find:

install_requires =
    livereload~=2.6
    ordered-set~=3.1
    semver~=2.9
    send2trash~=1.5

[options.entry_points]
console_scripts =
	x-clean = xcute.utils:clean
	x-cat = xcute.utils:concat
	x-copy = xcute.utils:copy
	x-pipe = xcute.utils:pipe

[vpip]
command_fallback = python cute.py
